--- a/les1.ipynb
+++ b/les1.ipynb
@@ -184,6 +184,156 @@
     "\n",
     "dict_generator3(list1, list2)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 3. Извлеките только два ключа name и age из представленного словаря"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_dict = {\n",
+    "\t\"name\": \"John\",\n",
+    "\t\"age\": 25,\n",
+    "\t\"salary\": 5000,\n",
+    "\t\"city\": \"Moscow\"\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.1 Напишите функцию с циклом for Функция на вход принимает: исходный словарь ключи, которые нужно извлечь (аргумент по умолчанию) На выходе словарь с нужными ключами Используйте аннотирование типов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John', 'age': 25}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parser(user_dict: dict, key_list: list) -> dict:\n",
+    "    result = {}\n",
+    "    for key in key_list:\n",
+    "        result[key] = user_dict.get(key)\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "parser(client_dict, [\"name\", \"age\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.2 Используя dict comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John', 'age': 25}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parser2(user_dict: dict, key_list: list) -> dict:\n",
+    "    return {key: user_dict.get(key) for key in key_list}\n",
+    "\n",
+    "parser2(client_dict, [\"name\", \"age\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задача 4. Сгенерируйте случайные целые числа от 0 до 100 в количестве 5 штук с помощью модуля random Зафиксируйте псевдогенерацию, чтобы сгенерированные значения всегда были одинаковые Используйте list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 72, 97, 8, 32]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "random.seed(1)\n",
+    "for i in range(5):\n",
+    "    result.append(random.randint(0,100))\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 72, 97, 8, 32]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.seed(1)\n",
+    "[random.randint(0,100) for i in range(5)]"
+   ]
   }
  ],
  "metadata": {
